FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Work__c.object
<CustomObject>
    <fields>
        <fullName>agf__Theme_Rank__c</fullName>
        <label>Rank of work item for team in a theme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme-Deprecated</label>
        <referenceTo>agf__ADM_Theme__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Total_Age_When_Closed__c</fullName>
        <formula>IF(ISBLANK(agf__Closed_On__c), 0, IF( agf__Created_On_Date__c &gt; DATEVALUE(agf__Closed_On__c), 0, DATEVALUE(agf__Closed_On__c) - agf__Created_On_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age When Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Trust_Rank__c</fullName>
        <label>Rank of work item for trust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Type_Value__c</fullName>
        <formula>CASE(agf__Type__c, &quot;Test Failure&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Gack</fullName>
                </value>
                <value>
                    <fullName>Help</fullName>
                </value>
                <value>
                    <fullName>Integrate</fullName>
                </value>
                <value>
                    <fullName>Test Change</fullName>
                </value>
                <value>
                    <fullName>Test Case</fullName>
                </value>
                <value>
                    <fullName>Test Failure</fullName>
                </value>
                <value>
                    <fullName>Test Tool</fullName>
                </value>
                <value>
                    <fullName>Skunkforce</fullName>
                </value>
                <value>
                    <fullName>Bug List</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Non Deterministic Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__UE_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UE Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Use_Prioritizer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether or not a work record should be shown on the Work Prioritizer page</description>
        <inlineHelpText>Used to determine whether or not a work record should be shown on the Work Prioritizer page</inlineHelpText>
        <label>Include in Prioritize View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__User_Profile_of_the_Creator__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>User Profile of the Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Type__c</fullName>
        <label>User Type (As a...)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Was_Ever_Returned_to_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox enables tracking which Investigations were ever marked with the status picklist value &quot;returned to support.&quot;</description>
        <label>Was Ever Returned to Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__WorkId_and_Subject__c</fullName>
        <description>Concatenation of WorkId and Subject</description>
        <formula>Name &amp; &apos;: &apos; &amp; agf__Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Concatenation of WorkId and Subject</inlineHelpText>
        <label>WorkId and Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__ftest__c</fullName>
        <inlineHelpText>Document the name of the automated test to prevent this bug happenning again.</inlineHelpText>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__of_Test_Failures__c</fullName>
        <label>Test Failures Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__visual_link_num_of_Test_Failures__c</fullName>
        <formula>HYPERLINK(&quot;https://build2.soma.salesforce.com/luna2/bughandlerreport.faces?workid=&quot;&amp; Name , TEXT(BLANKVALUE(agf__of_Test_Failures__c, 0)) , &quot;new&quot;)</formula>
        <inlineHelpText>The number of test failures associated with this record, updated hourly. Clicking on the number redirects to a report with real-time data, which also shows the fixed test failures associated with the record.</inlineHelpText>
        <label>Test Failures</label>
        <type>Text</type>
    </fields>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <recordTypes>
        <fullName>agf__Bug</fullName>
        <active>true</active>
        <description>Used to track defects or problems</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Investigation</fullName>
        <active>true</active>
        <description>Used to request R&amp;D triage/diagnosis support for a customer support escalation</description>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Template</fullName>
        <active>true</active>
        <description>Used to store common values which can then be applied to new Bugs</description>
        <label>Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__ToDo</fullName>
        <active>true</active>
        <description>Used to track a unit of work that does not need to have anything checked into Source Control nor does it need to have auto assignment rules applied</description>
        <label>ToDo</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__User_Story</fullName>
        <active>true</active>
        <description>Used to create feature requests. You are able to check in code against the user story record.</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Scheduled_Build_Not_Blank_P4_Status_Chng</fullName>
        <active>true</active>
        <description>Setting the P4 status to something other than --None-- requires that a scheduled build has been entered as well.</description>
        <errorConditionFormula>AND( ISBLANK( agf__Scheduled_Build__c ) ,CONTAINS(TEXT( agf__Perforce_Status__c ), &apos;Open&apos;))</errorConditionFormula>
        <errorMessage>Enter a valid scheduled build when setting the Source Control Status to Open or Open Once.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateAssigneeOnPeforceStatusOpen</fullName>
        <active>true</active>
        <description>Make sure there is an assignee designated if the source control status is changed to either open or open once.</description>
        <errorConditionFormula>AND(CASE( agf__Perforce_Status__c,
     &quot;Approved - Open&quot;, 1,
     &quot;Approved - Open Once&quot;, 1,
     0) = 1,agf__Assignee__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Perforce_Status__c</errorDisplayField>
        <errorMessage>An assignee must be specified if the source control status is changed to Approved - Open or Approved - Open Once</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateQAEngineerWithStatus</fullName>
        <active>true</active>
        <description>QA Engineer field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__QA_Engineer__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__QA_Engineer__c</errorDisplayField>
        <errorMessage>A QA Engineer must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateResolvedByWithStatus</fullName>
        <active>false</active>
        <description>Resolved_By__c field should not be populated if the Status indicates the the work record is still unresolved</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;New&quot;, 1,
&quot;In Progress&quot;, 1,
0) = 1, agf__Resolved_By__c != &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please update the Status__c field to something other than New or In Progress before populating the Resolved_By__c field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateScheduledBuildWithStatus</fullName>
        <active>false</active>
        <description>Scheduled Build field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__Scheduled_Build__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_Build__c</errorDisplayField>
        <errorMessage>A Scheduled Build must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
</CustomObject>